@@ -203,6 +203,9 @@ o svscan: added AUTOSCAN feature (which was actually part of the original
 - 13/07/2022
 87. added set-network-wait for svscan systemd service to wait till network is
     up.
+- 20/08/2022
+88. minisvc: skip lead space, comments, blank lines when converting envfile to
+    envdir
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
